--- a/word2vec-encoder.ipynb
+++ b/word2vec-encoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,8 +27,8 @@
       "Requirement already satisfied: certifi>=2017.4.17 in /Users/rishabhthaney/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from requests->torchvision) (2023.7.22)\n",
       "Requirement already satisfied: mpmath>=0.19 in /Users/rishabhthaney/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from sympy->torch) (1.3.0)\n",
       "Collecting git+https://github.com/openai/CLIP.git\n",
-      "  Cloning https://github.com/openai/CLIP.git to /private/var/folders/cz/d_k7_tfn267938ylcg0bywxr0000gn/T/pip-req-build-19eug23k\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/openai/CLIP.git /private/var/folders/cz/d_k7_tfn267938ylcg0bywxr0000gn/T/pip-req-build-19eug23k\n",
+      "  Cloning https://github.com/openai/CLIP.git to /private/var/folders/cz/d_k7_tfn267938ylcg0bywxr0000gn/T/pip-req-build-lxgn3jxi\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/openai/CLIP.git /private/var/folders/cz/d_k7_tfn267938ylcg0bywxr0000gn/T/pip-req-build-lxgn3jxi\n",
       "  Resolved https://github.com/openai/CLIP.git to commit a1d071733d7111c9c014f024669f959182114e33\n",
       "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
       "\u001b[?25hRequirement already satisfied: ftfy in /Users/rishabhthaney/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from clip==1.0) (6.2.0)\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,33 +292,199 @@
     "    w2v_rho_text_after_normalization, w2v_p_value = spearmanr(w2v_offset_vector_embedding.cpu().numpy(), w2v_fourth.cpu().numpy())\n",
     "    print(\"Word2Vec Spearman's correlation coefficient for text embedding after normalizing:\", w2v_rho_text_after_normalization)\n",
     "\n",
-    "    return w2v_cos_text_before_normalization, w2v_rho_text_before_normalization, w2v_cos_text_after_normalization, w2v_rho_text_after_normalization, w2v_offset_vector_embedding, w2v_fourth\n",
-    "\n",
-    "\n"
+    "    return w2v_cos_text_before_normalization, w2v_rho_text_before_normalization, w2v_cos_text_after_normalization, w2v_rho_text_after_normalization, w2v_offset_vector_embedding, w2v_fourth\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pair1 = \"hour:seconds\"\n",
+    "# pair2 = \"feet:inches\"\n",
+    "# find_w2v_text_embedding_arithmetics(pair1,pair2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "def process_file(pair):\n",
+    "\n",
+    "    pairs = pair.split(\"::\")\n",
+    "    pair1 = pairs[0]\n",
+    "    pair2 = pairs[1]\n",
+    "\n",
+    "\n",
+    "    cos_image_before_normalization, rho_image_before_normalization,cos_image_after_normalization, rho_image_after_normalization, offset_vector_embedding_image, fourth_image_embedding = find_image_embedding_arithmetics(pair1,pair2)\n",
+    "    cos_text_before_normalization, rho_text_before_normalization, cos_text_after_normalization, rho_text_after_normalization, offset_vector_embedding_text, fourth_text_embedding = find_text_embedding_arithmetics(pair1,pair2)\n",
+    "    w2v_cos_text_before_normalization, w2v_rho_text_before_normalization, w2v_cos_text_after_normalization, w2v_rho_text_after_normalization, w2v_offset_vector_embedding_text, w2v_fourth_text_embedding = find_w2v_text_embedding_arithmetics(pair1,pair2)\n",
+    "\n",
+    "    new_data = {\n",
+    "        'pair1':pair1,\n",
+    "        'pair2':pair2,\n",
+    "\n",
+    "        'cos_image_before_normalization':cos_image_before_normalization.item(),\n",
+    "        'rho_image_before_normalization':rho_image_before_normalization.item(),\n",
+    "        'cos_image_after_normalization':cos_image_after_normalization.item(),\n",
+    "        'rho_image_after_normalization':rho_image_after_normalization.item(),\n",
+    "\n",
+    "        'cos_text_before_normalization':cos_text_before_normalization.item(),\n",
+    "        'rho_text_before_normalization':rho_text_before_normalization.item(),\n",
+    "        'cos_text_after_normalization':cos_text_after_normalization.item(),\n",
+    "        'rho_text_after_normalization':rho_text_after_normalization.item(),\n",
+    "\n",
+    "        'w2v_cos_text_before_normalization':w2v_cos_text_before_normalization.item(),\n",
+    "        'w2v_rho_text_before_normalization':w2v_rho_text_before_normalization.item(),\n",
+    "        'w2v_cos_text_after_normalization':w2v_cos_text_after_normalization.item(),\n",
+    "        'w2v_rho_text_after_normalization':w2v_rho_text_after_normalization.item()\n",
+    "    }\n",
+    "\n",
+    "    embedding_data = {\n",
+    "        'pair1':pair1,\n",
+    "        'pair2':pair2,\n",
+    "\n",
+    "        'offset_vector_embedding_image' : offset_vector_embedding_image,\n",
+    "        'fourth_image_embedding' : fourth_image_embedding,\n",
+    "\n",
+    "        'offset_vector_embedding_text' : offset_vector_embedding_text,\n",
+    "        'fourth_text_embedding':fourth_text_embedding,\n",
+    "        \n",
+    "        'w2v_offset_vector_embedding_text' : w2v_offset_vector_embedding_text,\n",
+    "        'w2v_fourth_text_embedding':w2v_fourth_text_embedding\n",
+    "    }\n",
+    "\n",
+    "    return new_data, embedding_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cosine_similarity(): argument 'x1' (position 1) must be Tensor, not numpy.ndarray",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m pair1 \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhour:seconds\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      2\u001b[0m pair2 \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mfeet:inches\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m find_w2v_text_embedding_arithmetics(pair1,pair2)\n",
-      "Cell \u001b[0;32mIn[29], line 109\u001b[0m, in \u001b[0;36mfind_w2v_text_embedding_arithmetics\u001b[0;34m(pair1, pair2)\u001b[0m\n\u001b[1;32m    105\u001b[0m w2v_offset_vector_embedding \u001b[39m=\u001b[39m w2v_second \u001b[39m-\u001b[39m w2v_first \u001b[39m+\u001b[39m w2v_third\n\u001b[1;32m    107\u001b[0m \u001b[39m# King - Queen + Man = Woman\u001b[39;00m\n\u001b[0;32m--> 109\u001b[0m w2v_cos_sim \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39;49mcosine_similarity(w2v_offset_vector_embedding, w2v_fourth, dim\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m)\n\u001b[1;32m    111\u001b[0m w2v_cos_text_before_normalization \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mrad2deg(torch\u001b[39m.\u001b[39macos(w2v_cos_sim))\n\u001b[1;32m    114\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mWord2Vec Angle for text embedding before normalizing: Averaging \u001b[39m\u001b[39m\"\u001b[39m, w2v_cos_text_before_normalization)\n",
-      "\u001b[0;31mTypeError\u001b[0m: cosine_similarity(): argument 'x1' (position 1) must be Tensor, not numpy.ndarray"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---- Pair ---- hour:seconds::feet:inches\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rishabhthaney/.pyenv/versions/3.11.6/lib/python3.11/site-packages/PIL/Image.py:975: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Angle for Image embedding before normalizing: Averaging  tensor(44.0971)\n",
+      "Spearman's correlation coefficient for Image embedding before normalizing: 0.40121726262002033\n",
+      "Angle for Image embedding after normalizing: Averaging  tensor(35.3036)\n",
+      "Spearman's correlation coefficient for Image embedding after normalizing: 0.4918100223446745\n",
+      "Angle for text embedding before normalizing: Averaging  tensor(43.1168)\n",
+      "Spearman's correlation coefficient for text embedding before normalizing: 0.2857623868461107\n",
+      "Angle for text embedding after normalizing: Averaging  tensor(38.9310)\n",
+      "Spearman's correlation coefficient for text embedding after normalizing: 0.30123405331250497\n",
+      "Word2Vec Angle for text embedding before normalizing: Averaging  tensor(58.0464)\n",
+      "Word2Vec Spearman's correlation coefficient for text embedding before normalizing: 0.5296546773910836\n",
+      "Word2Vec Angle for text embedding after normalizing: Averaging  tensor(59.3113)\n",
+      "Word2Vec Spearman's correlation coefficient for text embedding after normalizing: 0.5160762070295298\n",
+      "---- Pair ---- kid:child::raise:elevate\n",
+      "Angle for Image embedding before normalizing: Averaging  tensor(18.0013)\n",
+      "Spearman's correlation coefficient for Image embedding before normalizing: 0.8003215623247616\n",
+      "Angle for Image embedding after normalizing: Averaging  tensor(18.8804)\n",
+      "Spearman's correlation coefficient for Image embedding after normalizing: 0.7876761502786646\n",
+      "Angle for text embedding before normalizing: Averaging  tensor(32.9414)\n",
+      "Spearman's correlation coefficient for text embedding before normalizing: 0.34155648110001025\n",
+      "Angle for text embedding after normalizing: Averaging  tensor(32.3152)\n",
+      "Spearman's correlation coefficient for text embedding after normalizing: 0.34962102030189635\n",
+      "Word2Vec Angle for text embedding before normalizing: Averaging  tensor(76.4940)\n",
+      "Word2Vec Spearman's correlation coefficient for text embedding before normalizing: 0.21207775014210742\n",
+      "Word2Vec Angle for text embedding after normalizing: Averaging  tensor(76.1316)\n",
+      "Word2Vec Spearman's correlation coefficient for text embedding after normalizing: 0.22175772153226447\n",
+      "---- Pair ---- library:books::bird:feathers\n",
+      "Angle for Image embedding before normalizing: Averaging  tensor(37.3273)\n",
+      "Spearman's correlation coefficient for Image embedding before normalizing: 0.5022428717341298\n",
+      "Angle for Image embedding after normalizing: Averaging  tensor(38.5901)\n",
+      "Spearman's correlation coefficient for Image embedding after normalizing: 0.49989235360089723\n",
+      "Angle for text embedding before normalizing: Averaging  tensor(34.4877)\n",
+      "Spearman's correlation coefficient for text embedding before normalizing: 0.3644085420457536\n",
+      "Angle for text embedding after normalizing: Averaging  tensor(36.1023)\n",
+      "Spearman's correlation coefficient for text embedding after normalizing: 0.34332772928325384\n",
+      "Word2Vec Angle for text embedding before normalizing: Averaging  tensor(70.6589)\n",
+      "Word2Vec Spearman's correlation coefficient for text embedding before normalizing: 0.31343925218450097\n",
+      "Word2Vec Angle for text embedding after normalizing: Averaging  tensor(71.5692)\n",
+      "Word2Vec Spearman's correlation coefficient for text embedding after normalizing: 0.304083686657034\n",
+      "---- Pair ---- weapon:spear::bird:robin\n",
+      "Angle for Image embedding before normalizing: Averaging  tensor(34.6815)\n",
+      "Spearman's correlation coefficient for Image embedding before normalizing: 0.6095167105835364\n",
+      "Angle for Image embedding after normalizing: Averaging  tensor(35.1576)\n",
+      "Spearman's correlation coefficient for Image embedding after normalizing: 0.6110264423902222\n",
+      "Angle for text embedding before normalizing: Averaging  tensor(42.0221)\n",
+      "Spearman's correlation coefficient for text embedding before normalizing: 0.3118230972694293\n",
+      "Angle for text embedding after normalizing: Averaging  tensor(39.8505)\n",
+      "Spearman's correlation coefficient for text embedding after normalizing: 0.3221830797026814\n",
+      "Word2Vec Angle for text embedding before normalizing: Averaging  tensor(60.7675)\n",
+      "Word2Vec Spearman's correlation coefficient for text embedding before normalizing: 0.47571659527998267\n",
+      "Word2Vec Angle for text embedding after normalizing: Averaging  tensor(60.1953)\n",
+      "Word2Vec Spearman's correlation coefficient for text embedding after normalizing: 0.485808331647856\n",
+      "---- Pair ---- wash:clean::teach:educated\n",
+      "Angle for Image embedding before normalizing: Averaging  tensor(37.9315)\n",
+      "Spearman's correlation coefficient for Image embedding before normalizing: 0.43768730831073127\n",
+      "Angle for Image embedding after normalizing: Averaging  tensor(34.6099)\n",
+      "Spearman's correlation coefficient for Image embedding after normalizing: 0.4748374753951088\n",
+      "Angle for text embedding before normalizing: Averaging  tensor(25.7882)\n",
+      "Spearman's correlation coefficient for text embedding before normalizing: 0.43186608787951614\n",
+      "Angle for text embedding after normalizing: Averaging  tensor(27.7687)\n",
+      "Spearman's correlation coefficient for text embedding after normalizing: 0.41452768622469416\n",
+      "Word2Vec Angle for text embedding before normalizing: Averaging  tensor(71.6205)\n",
+      "Word2Vec Spearman's correlation coefficient for text embedding before normalizing: 0.29857625167913315\n",
+      "Word2Vec Angle for text embedding after normalizing: Averaging  tensor(71.4961)\n",
+      "Word2Vec Spearman's correlation coefficient for text embedding after normalizing: 0.3024685089110415\n"
      ]
     }
    ],
    "source": [
-    "pair1 = \"hour:seconds\"\n",
-    "pair2 = \"feet:inches\"\n",
-    "find_w2v_text_embedding_arithmetics(pair1,pair2)"
+    "results = []\n",
+    "embedding_results = []\n",
+    "\n",
+    "# Process Training and Testing folders\n",
+    "# for sub_folder in ['Training', 'Testing']:\n",
+    "#     sub_folder_path = os.path.join(data_folder, sub_folder)\n",
+    "#     process_folder(sub_folder_path,results,embedding_results)\n",
+    "\n",
+    "lines = []\n",
+    "\n",
+    "with open('test_data.txt', 'r') as file:\n",
+    "    for line in file:\n",
+    "        # Remove newline character at the end of each line and append to the list\n",
+    "        lines.append(line.strip())\n",
+    "        \n",
+    "for pair in lines:\n",
+    "    print(\"---- Pair ----\" ,pair)\n",
+    "    similarity_data, embedding_data = process_file(pair)\n",
+    "    results.append(similarity_data)\n",
+    "    embedding_results.append(embedding_data)\n",
+    "\n",
+    "df = pd.DataFrame(results)\n",
+    "\n",
+    "df.to_csv('data_test.csv', index=False) # TODO: new file\n",
+    "\n",
+    "df_embedding = pd.DataFrame(embedding_results)\n",
+    "\n",
+    "df_embedding.to_csv('embeddings_test.csv', index=False) # TODO: new file"
    ]
   }
  ],
